# hello-app

./: .gitignore  README.md  pubspec.yaml
.github/: dependabot.yml
hello-electron/: README.md  index.html  main.js  package.json
hello-expo/: README.md  app.json  package.json  setup.sh
hello-flutter/: README.md
hello-tauri/: 1.Prerequisites.md  2.CreateProject.md  3.FrontendConfiguration.md  Cargo.toml  README.md  mobile.toml  next.config.js  package.json
hello-tauri/hello-app/src-tauri/: tauri.conf.json
hello-tauri/hello-tauri-react/: package.json
hello-tauri/hello-tauri-react/src/: App.tsx
hello-tauri/hello-tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
hello-tauri/hello-tauri-react/src-tauri/src/: main.rs
hello-tauri/hello-tauri-svelte/: package.json
hello-tauri/hello-tauri-svelte/src-tauri/: Cargo.toml  tauri.conf.json
hello-tauri/hello-tauri-svelte/src-tauri/src/: main.rs
hello-tauri/hello-tauri-svelte/src/routes/: +page.svelte
hello-tauri/hello-tauri-vanilla/: index.html  package.json
hello-tauri/hello-tauri-vanilla/src/: main.ts
hello-tauri/hello-tauri-vanilla/src-tauri/: Cargo.toml  tauri.conf.json
hello-tauri/hello-tauri-vanilla/src-tauri/src/: lib.rs  main.rs
hello-tauri/hello-tauri-vue/: package.json
hello-tauri/hello-tauri-vue/src/: App.vue
hello-tauri/hello-tauri-vue/src-tauri/: Cargo.toml  tauri.conf.json
hello-tauri/hello-tauri-vue/src-tauri/src/: main.rs
hello-tauri/src/: lib.rs
hello-tauri/src-tauri/: Cargo.toml  tauri.conf.json
hello-tauri/src-tauri/src/: main.rs
hello-tauri/src/app/: page.tsx
(+23 files in other folders)
